// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array-test array of complex values json-schema 1`] = `
"{
  \\"type\\": \\"object\\",
  \\"$schema\\": \\"http://json-schema.org/draft-07/schema#\\",
  \\"properties\\": {
    \\"field\\": {
      \\"type\\": \\"array\\",
      \\"items\\": {
        \\"type\\": \\"object\\",
        \\"required\\": [
          \\"innerField\\"
        ],
        \\"properties\\": {
          \\"innerField\\": {
            \\"type\\": \\"number\\"
          }
        },
        \\"additionalProperties\\": false
      }
    }
  },
  \\"required\\": [
    \\"field\\"
  ]
}"
`;

exports[`array-test array of complex values typescript 1`] = `
"// Generated file, do not edit!

// tslint:disable array-type
// @ts-ignore -- ignore possibly unused type parameters
export interface TestInterfaceBase<IDType, DateType>
{
  field: Array<{
    innerField: number
  }>
}"
`;

exports[`array-test array of simple values defined with options json-schema 1`] = `
"{
  \\"type\\": \\"object\\",
  \\"$schema\\": \\"http://json-schema.org/draft-07/schema#\\",
  \\"properties\\": {
    \\"field\\": {
      \\"type\\": \\"array\\",
      \\"items\\": {
        \\"type\\": \\"number\\"
      }
    }
  },
  \\"required\\": [
    \\"field\\"
  ]
}"
`;

exports[`array-test array of simple values defined with options typescript 1`] = `
"// Generated file, do not edit!

// tslint:disable array-type
// @ts-ignore -- ignore possibly unused type parameters
export interface TestInterfaceBase<IDType, DateType>
{
  field: Array<number>
}"
`;

exports[`array-test array of simple values json-schema 1`] = `
"{
  \\"type\\": \\"object\\",
  \\"$schema\\": \\"http://json-schema.org/draft-07/schema#\\",
  \\"properties\\": {
    \\"field\\": {
      \\"type\\": \\"array\\",
      \\"items\\": {
        \\"type\\": \\"number\\"
      }
    }
  },
  \\"required\\": [
    \\"field\\"
  ]
}"
`;

exports[`array-test array of simple values typescript 1`] = `
"// Generated file, do not edit!

// tslint:disable array-type
// @ts-ignore -- ignore possibly unused type parameters
export interface TestInterfaceBase<IDType, DateType>
{
  field: Array<number>
}"
`;
